--- a/livrariadigitalweb/WebContent/index.html
+++ b/livrariadigitalweb/WebContent/index.html
@@ -5,6 +5,6 @@
 <title>Projeto Livraria Digital Web</title>
 </head>
 <body>
-	<h1>Iniciando o projeto da Livraria Digital Web</h1>
+	<h1>Iniciando o projeto da Livraria Digital Web - Sandro</h1>
 </body>
 </html>
