Aplicação de javascript

--- a/livrariadigitalweb/WebContent/index.html
+++ b/livrariadigitalweb/WebContent/index.html
@@ -3,8 +3,25 @@
 <head>
 <meta charset="UTF-8">
 <title>Projeto Livraria Digital Web</title>
+<link rel="stylesheet" href="css/jquery-ui.css">
+<script type="text/javascript" src="js/jquery-1.8.2.js"></script>
+<script type="text/javascript" src="js/jquery-ui.js"></script>
+<script type="text/javascript" src="js/controles.js"></script>
+<style type="text/css">
+        div {
+        	display: none;
+            width: 600px;
+            height: 600px;
+            background: #ccc;
+    		border: 1px solid #000;
+        }
+    </style>
 </head>
 <body>
-	<h1>Iniciando o projeto da Livraria Digital Web - Sandro</h1>
+	<h1>Livraria Digital</h1>
+	<input type="button" value="AJAX!" ID="botao">
+      <div ID="quadrado">&nbsp;</div>
 </body>
+
+
 </html>
