--- a/livrariadigitalweb/WebContent/index.html
+++ b/livrariadigitalweb/WebContent/index.html
@@ -4,9 +4,11 @@
 <meta charset="UTF-8">
 <title>Projeto Livraria Digital Web</title>
 <link rel="stylesheet" href="css/jquery-ui.css">
+<link rel="stylesheet" href="css/bootstrap.min.css">
 <script type="text/javascript" src="js/jquery-1.8.2.js"></script>
 <script type="text/javascript" src="js/jquery-ui.js"></script>
 <script type="text/javascript" src="js/controles.js"></script>
+<script type="text/javascript" src="js/bootstrap.min.js"></script>
 <style type="text/css">
         div {
         	display: none;
@@ -28,8 +30,8 @@
 	</select>
 	<input type="text" name="busca"  id="busca"/>
 	<input type="button" value="Buscar" ID="botao">
-	
-      <div ID="quadrado">&nbsp;</div>
+	<span><a href="AdicionarLivro" class="btn btn-success btn-xs active">Cadastrar livro</span></a>
+    <div ID="quadrado">&nbsp;</div>
 </body>
 
 
